--- a/index.html
+++ b/index.html
@@ -58,9 +58,9 @@
       var buildUrl = "Build";
       var loaderUrl = buildUrl + "/arenaAlpha-Build.loader.js";
       var config = {
-        dataUrl: buildUrl + "/arenaAlpha-Build.data.gz",
-        frameworkUrl: buildUrl + "/arenaAlpha-Build.framework.js.gz",
-        codeUrl: buildUrl + "/arenaAlpha-Build.wasm.gz",
+        dataUrl: buildUrl + "/arenaAlpha-Build.data.unityweb",
+        frameworkUrl: buildUrl + "/arenaAlpha-Build.framework.js.unityweb",
+        codeUrl: buildUrl + "/arenaAlpha-Build.wasm.unityweb",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "DefaultCompany",
         productName: "AlphaNew",
