--- a/index.html
+++ b/index.html
@@ -56,11 +56,11 @@
       }
 
       var buildUrl = "Build";
-      var loaderUrl = buildUrl + "/New folder.loader.js";
+      var loaderUrl = buildUrl + "/arenaAlpha-Build.loader.js";
       var config = {
-        dataUrl: buildUrl + "/New folder.data.unityweb",
-        frameworkUrl: buildUrl + "/New folder.framework.js.unityweb",
-        codeUrl: buildUrl + "/New folder.wasm.unityweb",
+        dataUrl: buildUrl + "/arenaAlpha-Build.data.unityweb",
+        frameworkUrl: buildUrl + "/arenaAlpha-Build.framework.js.unityweb",
+        codeUrl: buildUrl + "/arenaAlpha-Build.wasm.unityweb",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "DefaultCompany",
         productName: "AlphaNew",
